--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^4.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
