--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "isomorphic-unfetch": "^2.0.0",
     "next": "^4.1.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "styled-components": "^2.2.4"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.3.0"
   }
 }
