--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.3.0"
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-styled-components": "^1.3.0",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
