--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "devDependencies": {
     "babel-eslint": "^8.0.2",
     "babel-plugin-styled-components": "^1.3.0",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "^0.60.0"
   }
 }
