--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
+    "build": "next build src",
     "start": "NODE_ENV=production node server.js",
     "create-component": "./scripts/create-component.sh"
   },
