--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "create-component": "./scripts/create-component.sh"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.4",
+    "apollo-client": "^2.0.4",
+    "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
     "express": "^4.16.2",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^4.1.4",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "styled-components": "^2.2.4"
   },
