--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
     "express": "^4.16.2",
+    "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^4.1.4",
     "prop-types": "^15.6.0",
