--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "^7.4.0",
-    "flow-bin": "^0.60.0"
+    "flow-bin": "^0.60.0",
+    "prettier": "^1.9.2"
   }
 }
