--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.1.10",
     "redux": "^3.7.2",
     "styled-components": "^2.2.4"
   },
