--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "styled-components": "^2.2.4"
   },
