--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
     "next": "^4.1.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
+    "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
