--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "apollo-client": "^2.0.4",
     "apollo-link": "^1.0.7",
     "apollo-link-http": "^1.3.2",
-    "apollo-link-state": "^0.3.1",
     "axios": "^0.17.1",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
@@ -24,9 +23,11 @@
     "next": "^4.1.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-apollo": "2.0.4",
+    "react-apollo": "1.4.16",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
