--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "next": "^4.1.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-apollo": "1.4.16",
+    "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
@@ -34,7 +34,7 @@
     "babel-eslint": "^8.0.2",
     "babel-plugin-styled-components": "^1.3.0",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "^4.12.1",
+    "eslint": "4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -42,7 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "^7.4.0",
-    "flow-bin": "^0.60.0",
+    "flow-bin": "0.63.1",
     "prettier": "^1.9.2"
   }
 }
