--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^4.1.4",
+    "next": "4.2.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
@@ -31,7 +31,7 @@
     "styled-components": "^2.2.4"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "8.2.1",
     "babel-plugin-styled-components": "^1.3.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "4.15.0",
@@ -43,6 +43,6 @@
     "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "^7.4.0",
     "flow-bin": "0.63.1",
-    "prettier": "^1.9.2"
+    "prettier": "1.10.2"
   }
 }
