--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "4.2.2",
+    "next": "4.2.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.4.0",
+    "eslint-plugin-prettier": "2.5.0",
     "eslint-plugin-react": "^7.4.0",
     "flow-bin": "0.63.1",
     "prettier": "1.10.2"
