--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "styled-components": "^2.2.4"
+    "styled-components": "3.0.2"
   },
   "devDependencies": {
     "babel-eslint": "8.2.1",
-    "babel-plugin-styled-components": "^1.3.0",
+    "babel-plugin-styled-components": "1.5.0",
     "babel-preset-flow": "^6.23.0",
     "eslint": "4.15.0",
     "eslint-config-airbnb": "^16.1.0",
