--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
-    "react-modal": "^3.1.10",
+    "react-modal": "3.1.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "styled-components": "3.0.2"
@@ -34,14 +34,14 @@
     "babel-eslint": "8.2.1",
     "babel-plugin-styled-components": "1.5.0",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "4.15.0",
+    "eslint": "4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "2.5.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "7.6.0",
     "flow-bin": "0.64.0",
     "prettier": "1.10.2"
   }
