--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "4.2.3",
+    "next": "^5.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
