--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "build": "next build src",
     "start": "NODE_ENV=production node server.js",
     "create-component": "./scripts/create-component.sh",
-    "create-stateful-component": "./scripts/create-stateful-component.sh"
+    "create-stateful-component": "./scripts/create-stateful-component.sh",
+    "upgrade-packages": "yarn upgrade-interactive [--latest]"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "1.1.7",
-    "apollo-client": "2.2.2",
+    "apollo-cache-inmemory": "1.1.9",
+    "apollo-client": "2.2.5",
     "apollo-link": "^1.0.7",
     "apollo-link-http": "^1.3.2",
     "axios": "^0.17.1",
     "express": "^4.16.2",
-    "graphql": "^0.12.3",
+    "graphql": "^0.13.1",
     "graphql-tag": "^2.6.1",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^5.0.0",
@@ -25,7 +26,7 @@
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
     "react-dom": "^16.2.0",
-    "react-modal": "3.1.13",
+    "react-modal": "3.2.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "styled-components": "3.1.6"
@@ -34,7 +35,7 @@
     "babel-eslint": "8.2.1",
     "babel-plugin-styled-components": "1.5.0",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "4.17.0",
+    "eslint": "4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
@@ -43,7 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.6.1",
-    "flow-bin": "0.64.0",
+    "flow-bin": "0.66.0",
     "prettier": "1.10.2"
   }
 }
