--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "styled-components": "3.1.6"
   },
   "devDependencies": {
+    "@types/express": "^4.11.1",
+    "@types/graphql": "^0.13.0",
+    "@types/next": "^2.4.8",
+    "@types/react": "^16.3.5",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-modal": "^3.1.2",
+    "@types/react-redux": "^5.0.15",
+    "@zeit/next-typescript": "^0.1.1",
     "babel-eslint": "8.2.1",
     "babel-plugin-styled-components": "1.5.0",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "4.18.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.42.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.6.1",
-    "flow-bin": "0.66.0",
-    "prettier": "1.10.2"
+    "prettier": "1.10.2",
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.1"
   }
 }
