--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-dom": "^16.2.0",
     "react-modal": "3.2.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
+    "redux": "4.0.0",
     "styled-components": "^3.2.5",
     "tslint-config-prettier": "^1.10.0"
   },
