--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^5.1.0",
+    "next": "6.0.2",
     "prop-types": "^15.6.0",
     "react": "16.3.2",
     "react-apollo": "2.1.3",
